# DocumentPortal

./: .gitignore  NOTE.md  pyproject.toml  requirements.txt  setup.py  test.py
config/: config.yaml
exception/: custom_exception.py
logger/: custom_logger.py
model/: models.py
notebook/: exception_experiment.ipynb  experiments.ipynb  logging_experiment.ipynb
prompt/: prompt_library.py
src/document_analyzer/: data_analysis.py  data_ingestion.py
src/document_compare/: data_ingestion.py  document_comparator.py
utils/: config_loader.py  model_loader.py
